# INMOFLOW-ML

./: .env.example  Makefile  README.md  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: ci.yml  ml7_baseline.yml
api/: health.py  index.py  main.py  openapi.yaml  schemas.py  version.py
api/ml/: match.py
app/api/ml/score/: route.ts
infra/docker/: Dockerfile
inmoflow-ml/: pyproject.toml
inmoflow-ml/api/: deps.py  schemas.py
ml/: baseline_ml7.py  embeddings.py  featurizer.py  matching_demo.py  ranking.py
tests/: test_health.py
